syntax = "proto3";
package ChatPto;

enum MsgType{
    normal = 0;
    private = 1;
}

//发送消息
message C_SEND_MESSAGE{
    int32 cmd = 1[default = 100]; 
	int32 scmd = 2[default = 1];
    int32 uid = 3;
    string msg = 4;
	MsgType msgType = 5;
}

//收到信息
message S_CHAT_MESSAGE{
    int32 cmd = 1[default = 100]; 
	int32 scmd = 2[default = 2];
    string msg = 3;
    string nick = 4;
    int32 uid = 5;
	MsgType msgType = 6;
}